samples/_failures_safe/1761321854_eba491_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_20518b11.c: In function ‘main’:
./samples/SAFE/__tmp_20518b11.c:146:9: error: expected expression at end of input
  146 |         switch (choice)
      |         ^~~~~~
./samples/SAFE/__tmp_20518b11.c:146:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_20518b11.c:146:9: error: expected declaration or statement at end of input
